--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@sanity/icons": "^3.7.4",
     "@sanity/image-url": "^1.2.0",
+    "@sanity/locale-fr-fr": "^1.2.28",
     "@sanity/vision": "^4.22.0",
     "framer-motion": "^12.34.0",
     "next": "16.1.6",
